--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -11,52 +11,53 @@
   <form [formGroup]="searchForm" (ngSubmit)="Search()">
     <ion-searchbar formControlName="search" ></ion-searchbar>
   </form> 
-  <ion-slides [options]="{ slidesPerView: 'auto', zoom: false, grabCursor: true }">
-  <ion-slide *ngFor="let card of cardList" style="--my-color-var: {{card.color_gradient}};">
-      <ion-col style="height: 100%;">
-        <ion-label>{{ card.title }}</ion-label>        
+  <ion-text>
+    <h4 class="category_head">Categories</h4>
+  </ion-text>
+  <ion-slides class="category-slides" [options]="{ slidesPerView: 'auto', zoom: false, grabCursor: true }">
+  <ion-slide class="ion-activatable ripple-parent category-slide" *ngFor="let card of categoryCardList" style="--my-color-var: {{card.color_gradient}};" routerLink="{{card.link}}">
+      <ion-col>
+        <ion-label class="category_labels">{{ card.title }}</ion-label>        
       </ion-col>
+      <ion-ripple-effect></ion-ripple-effect>
     </ion-slide>
   </ion-slides> 
-  <ion-grid>
-    <ion-row>
-      <ion-col size="6" *ngFor="let item of cardList">
-        <ion-card style="background-image: url({{item.background_image}});">
-          <ion-card-content>
-            <ion-card-title>
-              {{item.title}}
-              </ion-card-title>
-               <button ion-item (click)="openDetailActivity(item)">            
-              More info
-              <ion-icon name="arrow-forward" item-right color="primary"></ion-icon>
-            </button>
-          </ion-card-content>
+  <ion-text>
+    <h4 class="category_head">Featured</h4>
+  </ion-text>
+  <ion-slides class="category-slides" [options]="{ slidesPerView: 'auto', zoom: false, grabCursor: true }">
+    <ion-slide class="featured-slide" *ngFor="let items of feturedCardList" >
+      <ion-card class="featuredCard" >
+      <img class="card-img" src="{{items.image}}">
+      <!-- <ion-card-header class="featured-card-header">
+        <ion-card-subtitle>{{items.title}}</ion-card-subtitle>
+      </ion-card-header> -->
+      <ion-card-content class="featured-card-content">
+        <h3 class="card-link-text">View
+        <ion-icon name="arrow-forward" item-right color="primary"></ion-icon>
+        </h3>
+      </ion-card-content>
         </ion-card>
-      </ion-col>
-    </ion-row>  
-  </ion-grid>
-  <ion-tabs>
-
-  <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1">
-      <ion-icon name="flash"></ion-icon>
-      <ion-label>Tab One</ion-label>
-    </ion-tab-button>
-
-    <ion-tab-button tab="tab2">
-      <ion-icon name="images"></ion-icon>
-      <ion-label>Gallery</ion-label>
-    </ion-tab-button>
-
-    <ion-tab-button tab="tab3">
-      <ion-icon name="send"></ion-icon>
-      <ion-label>Tab Three</ion-label>
-    </ion-tab-button>
-    <ion-tab-button tab="login">
-      <ion-icon name="send"></ion-icon>
-      <ion-label>Tab Four</ion-label>
-    </ion-tab-button>
-  </ion-tab-bar>
-
-</ion-tabs>
+      </ion-slide>
+    </ion-slides> 
+    <ion-text>
+      <h4 class="category_head">Top Picks</h4>
+    </ion-text>
+    <ion-slides class="category-slides" [options]="{ slidesPerView: 'auto', zoom: false, grabCursor: true }">
+    <ion-slide class="featured-slide" *ngFor="let items of feturedCardList" >
+      <ion-card class="featuredCard" >
+      <img class="card-img" src="{{items.image}}">
+      <!-- <ion-card-header class="featured-card-header">
+        <ion-card-subtitle>{{items.title}}</ion-card-subtitle>
+      </ion-card-header> -->
+      <ion-card-content class="featured-card-content">
+        <h3 class="card-link-text">View
+        <ion-icon name="arrow-forward" item-right color="primary"></ion-icon>
+        </h3>
+      </ion-card-content>
+        </ion-card>
+      </ion-slide>
+    </ion-slides> 
+  
 </ion-content>
+
