--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,23 +1,19 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1">
-      <ion-icon name="flash"></ion-icon>
-      <ion-label>Tab One</ion-label>
+    <ion-tab-button tab="home">
+      <ion-icon name="home"></ion-icon>
+      <ion-label>Home</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
-      <ion-icon name="images"></ion-icon>
-      <ion-label>Gallery</ion-label>
+      <ion-icon name="chatbox-ellipses"></ion-icon>
+      <ion-label>Contact Us</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon name="send"></ion-icon>
-      <ion-label>Tab Three</ion-label>
-    </ion-tab-button>
-    <ion-tab-button tab="login">
-      <ion-icon name="send"></ion-icon>
-      <ion-label>Tab Four</ion-label>
+      <ion-icon name="person-circle"></ion-icon>
+      <ion-label>Account</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
