--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,17 +2,17 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="home">
-      <ion-icon name="home"></ion-icon>
+      <ion-img src="../../assets/page.png"></ion-img>
       <ion-label>Home</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
-      <ion-icon name="chatbox-ellipses"></ion-icon>
+      <ion-img src="../../assets/sale.png"></ion-img>
       <ion-label>Contact Us</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon name="person-circle"></ion-icon>
+      <ion-img src="../../assets/account.png"></ion-img>
       <ion-label>Account</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
