--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,23 +1,48 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Photo Gallery
-    </ion-title>
+  <ion-toolbar >
+    <ion-title>home</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button menu="main-menu"></ion-menu-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-grid>
-    <ion-row>
-    <ion-col col-6 *ngFor="let photo of photoService.photos">
-        <img [src]="photo.data" />
-        </ion-col>
-    </ion-row>
-  </ion-grid>
-  
-  <ion-fab vertical="bottom" horizontal="center" slot="fixed">
-      <ion-fab-button (click)="photoService.takePicture()">
-        <ion-icon name="camera"></ion-icon>
-      </ion-fab-button>
-  </ion-fab>
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="max-height:476px; overflow:hidden">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="../../assets/carousel1.jpg" alt="First slide">
+    </div>
+    <div class="carousel-item" *ngFor="let item of caraouselList">
+      <img class="d-block w-100" src="{{item.img}}" alt="Second slide">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+<ion-text style="line-height: 52px;">
+  <h4 class="category_head" >Top Deals</h4>
+  <a routerLink="/featured" class="link_text">See All</a>
+</ion-text>
+<ion-slides class="category-slides" [options]="{ slidesPerView: 'auto', zoom: false, grabCursor: true }">
+  <ion-slide class="featured-slide" *ngFor="let items of feturedCardList" >
+    <ion-card class="featuredCard" >
+    <img class="card-img" src="{{items.image}}">
+    <!-- <ion-card-header class="featured-card-header">
+      <ion-card-subtitle>{{items.title}}</ion-card-subtitle>
+    </ion-card-header> -->
+    <ion-card-content class="featured-card-content">
+      <h3 class="card-link-text">View
+      <ion-icon name="arrow-forward" item-right color="primary"></ion-icon>
+      </h3>
+    </ion-card-content>
+      </ion-card>
+    </ion-slide>
+  </ion-slides> 
 </ion-content>
