--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -8,7 +8,7 @@
 
     <ion-tab-button tab="tab2">
       <ion-img src="../../assets/sale.png"></ion-img>
-      <ion-label>Contact Us</ion-label>
+      <ion-label>Offers</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
