--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -10,11 +10,11 @@ ion-toolbar{
   font-weight: 500;
 }
 
-ion-content{
-  --padding-start: 3%;
-  --padding-end: 3%;
-  --padding-top: 3%;
-}
+// ion-content{
+//   --padding-start: 3%;
+//   --padding-end: 3%;
+//   --padding-top: 3%;
+// }
 
 .carousel-item.active {
     display: block;
@@ -39,9 +39,16 @@ ion-content{
     color: #4864e2; 
     outline: none; 
     text-decoration: none;
+    margin-right: 3%;
   }
 
   //card css
+  .category-slides{
+    padding-left: 3%;
+    padding-right: 3%;
+    margin-bottom: 2%;
+  }
+
   .featured-card-content{
     // padding: 0px;
     border-top: 3px dashed #787878;
@@ -87,3 +94,112 @@ ion-content{
     height: 220px;
     width: 100%;
   }
+
+  //product card grid
+  h1 {
+    font-size: 24px;
+    font-weight: 400;
+    text-align: center;
+}
+
+img {
+  height: auto;
+  max-width: 100%;
+  vertical-align: middle;
+}
+
+.btn {
+  color: #ffffff;
+  padding: 0.8rem;
+  font-size: 14px;
+  text-transform: uppercase;
+  border-radius: 4px;
+  font-weight: 400;
+  display: block;
+  width: 100%;
+  cursor: pointer;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  background: transparent;
+}
+
+.btn:hover {
+  background-color: rgba(255, 255, 255, 0.12);
+}
+
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  margin: 0;
+  padding: 1rem;
+  // background-color: yellow;
+}
+
+.cards_item {
+  display: flex;
+  padding: 0px;
+}
+
+@media (min-width: 40rem) {
+  .cards_item {
+    width: 50%;
+  }
+}
+
+@media (min-width: 56rem) {
+  .cards_item {
+    width: 33.3333%;
+  }
+}
+
+@media(min-width: 896px){
+  #mob_view_img{
+    display: none;
+  }
+  #pc_view_img{
+    display: block;
+  }
+}
+@media(max-width: 895px){
+  #mob_view_img{
+    display: block;
+  }
+  #pc_view_img{
+    display: none;
+  }
+}
+
+.card {
+  background-color: white;
+  border-radius: 0.25rem;
+  box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25);
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
+
+.card_content {
+  padding: 1rem;
+  background: linear-gradient(to bottom left, #EF8D9C 40%, #FFC39E 100%);
+}
+
+.card_title {
+  color: #ffffff;
+  font-size: 1.1rem;
+  font-weight: 700;
+  letter-spacing: 1px;
+  text-transform: capitalize;
+  margin: 0px;
+}
+
+.card_text {
+  color: #ffffff;
+  font-size: 0.875rem;
+  line-height: 1.5;
+  margin-bottom: 1.25rem;    
+  font-weight: 400;
+}
+
+ion-grid{
+    padding: 0px;
+}
