--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -37,7 +37,7 @@
     <ion-card-content class="featured-card-content">
       <div class="details">
         <h1>{{items.title}}</h1>
-        <p>£250</p>
+        <p>£{{items.price}}</p>
       </div>
       <div class="buy" routerLink="/featured"><ion-icon name="eye"></ion-icon></div>
     </ion-card-content>
