--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,9 +1,40 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>
-      Tab Three
-    </ion-title>
+    <ion-title>home</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button menu="main-menu"></ion-menu-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content>
+  <!-- <ion-text>
+    <p class="login_warn">Login To view your Account Details.</p>
+  </ion-text>
+  <ion-button  type="button" class="login_btn"  size="default">Login</ion-button> -->
+
+<div class="row">
+  <div class="col-xs-6 col-md-6 col-lg-6 img_col">
+    <ion-img src="../../assets/person.png"></ion-img>
+    <h3 class="name_text">Guest</h3>
+  </div>
+  <div class="col-xs-6 col-md-6 col-lg-6 det_col">
+    <h3 class="detail">Details</h3>
+    <h4 class="hd">Email</h4>
+    <h3 class="vl">itsrachit.agarwal@gmail.com</h3>
+    <h4 class="hd">Mobile</h4>
+    <h3 class="vl">8400268099</h3>
+    <h4 class="hd">City</h4>
+    <h3 class="vl">Lucknow</h3>
+    <h4 class="hd">Password</h4>
+    <h3 class="vl">********</h3>
+    <h4 class="hd">Address</h4>
+    <button type="button" class="btn btn-outline-danger btn-lg btn-block">Delete Account</button>
+<button type="button" class="btn btn-outline-warning btn-lg btn-block">Logout</button>
+   <button type="button" class="btn btn-outline-success btn-lg btn-block">Edit Account</button>
+
+  </div>
+</div>
+
+  
+</ion-content>
