--- a/src/app/featured/featured.page.html
+++ b/src/app/featured/featured.page.html
@@ -11,164 +11,20 @@
 </ion-header>
 
 <ion-content>
-  <ul class="cards">
-    <li class="cards_item">
-      <ion-grid>
-        <ion-row>
-          <ion-col size="6">
-            <div class="card">
-              <div class="card_image"><img src="https://picsum.photos/500/300/?image=10"></div>
-              <div class="card_content">
-                <h2 class="card_title">Card Grid Layout</h2>
-                <p class="card_text">Demo of pixel perfect pure CSS simple responsive card grid layout</p>
-                <button class="btn card_btn">Read More</button>
-              </div>
+  <div class="row">
+    <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2" *ngFor="let items of x">
+      <div class="featured-slide">
+        <div class="featuredCard">
+          <img class="card-img" src="{{items.image}}">
+          <ion-card-content class="featured-card-content">
+            <div class="details">
+              <h1>{{items.title}}</h1>
+              <p>£{{items.price}}</p>
             </div>
-          </ion-col>
-          <ion-col size="6">
-            <div class="card">
-              <div class="card_image"><img src="https://picsum.photos/500/300/?image=10"></div>
-              <div class="card_content">
-                <h2 class="card_title">Card Grid Layout</h2>
-                <p class="card_text">Demo of pixel perfect pure CSS simple responsive card grid layout</p>
-                <button class="btn card_btn">Read More</button>
-              </div>
-            </div>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
-
-    </li>
-    <li class="cards_item">
-      <ion-grid>
-        <ion-row>
-          <ion-col size="6">
-            <div class="card">
-              <div class="card_image"><img src="https://picsum.photos/500/300/?image=10"></div>
-              <div class="card_content">
-                <h2 class="card_title">Card Grid Layout</h2>
-                <p class="card_text">Demo of pixel perfect pure CSS simple responsive card grid layout</p>
-                <button class="btn card_btn">Read More</button>
-              </div>
-            </div>
-          </ion-col>
-          <ion-col size="6">
-            <div class="card">
-              <div class="card_image"><img src="https://picsum.photos/500/300/?image=10"></div>
-              <div class="card_content">
-                <h2 class="card_title">Card Grid Layout</h2>
-                <p class="card_text">Demo of pixel perfect pure CSS simple responsive card grid layout</p>
-                <button class="btn card_btn">Read More</button>
-              </div>
-            </div>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
-    </li>
-    <li class="cards_item">
-      <ion-grid>
-        <ion-row>
-          <ion-col size="6">
-            <div class="card">
-              <div class="card_image"><img src="https://picsum.photos/500/300/?image=10"></div>
-              <div class="card_content">
-                <h2 class="card_title">Card Grid Layout</h2>
-                <p class="card_text">Demo of pixel perfect pure CSS simple responsive card grid layout</p>
-                <button class="btn card_btn">Read More</button>
-              </div>
-            </div>
-          </ion-col>
-          <ion-col size="6">
-            <div class="card">
-              <div class="card_image"><img src="https://picsum.photos/500/300/?image=10"></div>
-              <div class="card_content">
-                <h2 class="card_title">Card Grid Layout</h2>
-                <p class="card_text">Demo of pixel perfect pure CSS simple responsive card grid layout</p>
-                <button class="btn card_btn">Read More</button>
-              </div>
-            </div>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
-    </li>
-    <li class="cards_item">
-      <ion-grid>
-        <ion-row>
-          <ion-col size="6">
-            <div class="card">
-              <div class="card_image"><img src="https://picsum.photos/500/300/?image=10"></div>
-              <div class="card_content">
-                <h2 class="card_title">Card Grid Layout</h2>
-                <p class="card_text">Demo of pixel perfect pure CSS simple responsive card grid layout</p>
-                <button class="btn card_btn">Read More</button>
-              </div>
-            </div>
-          </ion-col>
-          <ion-col size="6">
-            <div class="card">
-              <div class="card_image"><img src="https://picsum.photos/500/300/?image=10"></div>
-              <div class="card_content">
-                <h2 class="card_title">Card Grid Layout</h2>
-                <p class="card_text">Demo of pixel perfect pure CSS simple responsive card grid layout</p>
-                <button class="btn card_btn">Read More</button>
-              </div>
-            </div>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
-    </li>
-    <li class="cards_item">
-      <ion-grid>
-        <ion-row>
-          <ion-col size="6">
-            <div class="card">
-              <div class="card_image"><img src="https://picsum.photos/500/300/?image=10"></div>
-              <div class="card_content">
-                <h2 class="card_title">Card Grid Layout</h2>
-                <p class="card_text">Demo of pixel perfect pure CSS simple responsive card grid layout</p>
-                <button class="btn card_btn">Read More</button>
-              </div>
-            </div>
-          </ion-col>
-          <ion-col size="6">
-            <div class="card">
-              <div class="card_image"><img src="https://picsum.photos/500/300/?image=10"></div>
-              <div class="card_content">
-                <h2 class="card_title">Card Grid Layout</h2>
-                <p class="card_text">Demo of pixel perfect pure CSS simple responsive card grid layout</p>
-                <button class="btn card_btn">Read More</button>
-              </div>
-            </div>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
-    </li>
-    <li class="cards_item">
-      <ion-grid>
-        <ion-row>
-          <ion-col size="6">
-            <div class="card">
-              <div class="card_image"><img src="https://picsum.photos/500/300/?image=10"></div>
-              <div class="card_content">
-                <h2 class="card_title">Card Grid Layout</h2>
-                <p class="card_text">Demo of pixel perfect pure CSS simple responsive card grid layout</p>
-                <button class="btn card_btn">Read More</button>
-              </div>
-            </div>
-          </ion-col>
-          <ion-col size="6">
-            <div class="card">
-              <div class="card_image"><img src="https://picsum.photos/500/300/?image=10"></div>
-              <div class="card_content">
-                <h2 class="card_title">Card Grid Layout</h2>
-                <p class="card_text">Demo of pixel perfect pure CSS simple responsive card grid layout</p>
-                <button class="btn card_btn">Read More</button>
-              </div>
-            </div>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
-    </li>
-  </ul>
-
+            <div class="buy" routerLink="/featured"><ion-icon name="eye"></ion-icon></div>
+          </ion-card-content>
+        </div>
+      </div>
+    </div>
+  </div>  
 </ion-content>
