--- a/src/app/featured/featured.page.scss
+++ b/src/app/featured/featured.page.scss
@@ -28,30 +28,6 @@ img {
   background-color: rgba(255, 255, 255, 0.12);
 }
 
-.cards {
-  display: flex;
-  flex-wrap: wrap;
-  list-style: none;
-  margin: 0;
-  padding: 1rem;
-}
-
-.cards_item {
-  display: flex;
-  padding: 0px;
-}
-
-@media (min-width: 40rem) {
-  .cards_item {
-    width: 50%;
-  }
-}
-
-@media (min-width: 56rem) {
-  .cards_item {
-    width: 33.3333%;
-  }
-}
 
 .card {
   background-color: white;
@@ -83,7 +59,108 @@ img {
   margin-bottom: 1.25rem;    
   font-weight: 400;
 }
+ //new col
 
-ion-grid{
-    padding: 0px;
+ .row{
+   margin: 2%;
+ }
+
+ .card-img{
+  height: 220px;
+  width: 100%;
 }
+
+ @media (max-width:496px){
+  .col-xs-6{
+    width: 50%;
+    padding: 2%;
+  }
+ }
+
+ @media (min-width:496px){
+  .col-xs-6{
+    width: 50%;
+    padding: 0.5%;
+  }
+}
+
+@media (min-width:1239px){
+  .card-img{
+    height: 240px;
+    width: 100%;
+  }
+}
+
+
+.featured-slide{
+  max-width: 210px;
+  height: fit-content;
+  margin: 0px; 
+  border-radius: 8px;
+  background: #ffffff;
+  background-size: cover;   
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  outline: none !important;
+  overflow: hidden;
+}
+
+.featured-card-content{
+  padding: 0px;
+} 
+
+
+.featuredCard{
+  height: 100%;
+  width: 100%;
+  margin: 0%;
+}
+
+.details {
+  padding: 4px;
+  padding-left:7px;
+  float: left;
+  width: calc(70% - 2px);
+  text-align:left;
+  font-family: Montserrat;
+}
+
+.details h1{
+  font-family: Montserrat;
+  font-weight: 600;
+  font-size: 14px;
+  text-align: left;
+  max-width: 100%;
+  display: block;
+  height: 30px;
+  overflow: hidden;
+  line-height: 15px;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  text-overflow: ellipsis;
+}
+
+.details p{
+  font-family: Montserrat;
+  font-weight: 500 ;
+  font-size: 12px;
+}
+
+.buy {
+  float: right;
+  width: calc(30% - 2px);
+  height: 100%;
+  background: #f1f1f1;
+  transition: background 0.5s;
+  border-left: solid thin rgba(0, 0, 0, 0.1);
+}
+.buy ion-icon {
+  font-size: 30px;
+  padding: 18%;
+  padding-top: 14px;
+  padding-bottom: 14px;
+  cursor: pointer;
+  outline: none !important;
+  color: #254053;
+  transition: transform 0.5s;
+}
+
