--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,6 +20,7 @@
         <ion-menu-toggle><ion-item   routerLink='/featured' style="font-family: Montserrat; --inner-border-width: 0px;"><ion-icon name="shirt"></ion-icon>    Featured</ion-item></ion-menu-toggle>
         <ion-menu-toggle><ion-item   routerLink='/cart' style="font-family: Montserrat; --inner-border-width: 0px;"><ion-icon name="cart"></ion-icon>    Cart</ion-item></ion-menu-toggle>
         <ion-menu-toggle><ion-item   routerLink='/cart' style="font-family: Montserrat; --inner-border-width: 0px;"><ion-icon name="settings"></ion-icon>    My Account</ion-item></ion-menu-toggle>
+        <ion-menu-toggle><ion-item   routerLink='/cart' style="font-family: Montserrat; --inner-border-width: 0px;"><ion-icon name="chatbox-ellipses"></ion-icon>    Contact Us</ion-item></ion-menu-toggle>
         <ion-menu-toggle><ion-item *ngIf="loggedIn"  (click)="logout()" style="font-family: Montserrat; --inner-border-width: 0px; cursor: pointer;"><ion-icon name="log-out"></ion-icon>    Logout</ion-item></ion-menu-toggle>
       </ion-list>
     </ion-content>
