--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -5,7 +5,7 @@
   <ion-title size="large">Login</ion-title>
   <form (ngSubmit)="login()" [formGroup]="loginForm">
   <ion-item>
-    <ion-label position="floating">Username</ion-label>
+    <ion-label position="floating">Mobile Number</ion-label>
     <ion-input required type="text" formControlName="username"></ion-input>
   </ion-item>
   <ion-item>
