--- a/src/app/cart/cart.page.scss
+++ b/src/app/cart/cart.page.scss
@@ -75,10 +75,28 @@ ion-fab-button{
 
   .price_card{
     box-shadow: 0 0.063rem 0.188rem rgba(0,0,0,0.06), 0 0.125rem 0.375rem rgba(0,0,0,0.06), 0 0.188rem 0.5rem rgba(0,0,0,0.09);
-    height: 400px;
+    height: fit-content;
     border-radius: 5px;
     background-color: #fff;
     margin: 1%;
+  }
+
+  .price_card hr{
+    height: 1px;
+    border-width: 2px;
+    box-sizing: content-box;
+  }
+
+  .price_card h3{
+      font-family: Montserrat;
+      font-size: 20px;
+      font-weight: 500;
+  }
+
+  .price_card p{
+      font-family: Montserrat;
+      font-size: 16px;
+      font-weight: 500;
   }
 
   .img_col{
@@ -88,6 +106,7 @@ ion-fab-button{
 
   .img_col img{
       height: 125px;
+      width: 104px;
       border-radius: 5px;
   }
 
@@ -176,4 +195,24 @@ ion-fab-button{
     .login_warn{
         margin-top: 50%;
     }
+}
+
+.checkout_card{
+    box-shadow: 0 0.063rem 0.188rem rgba(0,0,0,0.06), 0 0.125rem 0.375rem rgba(0,0,0,0.06), 0 0.188rem 0.5rem rgba(0,0,0,0.09);
+    height: fit-content;
+    border-radius: 5px;
+    background-color: #fff;
+    margin: 1%;
+    padding: 10px;
+}
+
+.txt{
+    text-align: center;
+    padding: 5px;
+    padding-left: 6%;
+    padding-right: 6%;
+    font-family: Montserrat;
+    font-weight: 500;
+    font-size: 14px;
+    margin-bottom: 5px;
 }
