--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,13 +14,13 @@
     </ion-header>
     <ion-content>
       <ion-list>
-        <ion-menu-toggle><ion-item  routerLink='/' style="font-family: Montserrat; --inner-border-width: 0px;"><ion-icon name="home"></ion-icon>    Home</ion-item></ion-menu-toggle>
+        <ion-menu-toggle><ion-item  href='/' style="font-family: Montserrat; --inner-border-width: 0px;"><ion-icon name="home"></ion-icon>    Home</ion-item></ion-menu-toggle>
         <ion-menu-toggle><ion-item *ngIf="!loggedIn"  routerLink='/welcome' style="font-family: Montserrat; --inner-border-width: 0px;"><ion-icon name="log-in"></ion-icon>    Login/Sign Up</ion-item></ion-menu-toggle>
-        <ion-menu-toggle><ion-item   routerLink='/cart' style="font-family: Montserrat; --inner-border-width: 0px;"><ion-icon name="grid"></ion-icon>    Categories</ion-item></ion-menu-toggle>
-        <ion-menu-toggle><ion-item   routerLink='/featured' style="font-family: Montserrat; --inner-border-width: 0px;"><ion-icon name="shirt"></ion-icon>    Featured</ion-item></ion-menu-toggle>
-        <ion-menu-toggle><ion-item   routerLink='/cart' style="font-family: Montserrat; --inner-border-width: 0px;"><ion-icon name="cart"></ion-icon>    Cart</ion-item></ion-menu-toggle>
-        <ion-menu-toggle><ion-item   routerLink='/cart' style="font-family: Montserrat; --inner-border-width: 0px;"><ion-icon name="settings"></ion-icon>    My Account</ion-item></ion-menu-toggle>
-        <ion-menu-toggle><ion-item   routerLink='/cart' style="font-family: Montserrat; --inner-border-width: 0px;"><ion-icon name="chatbox-ellipses"></ion-icon>    Contact Us</ion-item></ion-menu-toggle>
+        <ion-menu-toggle><ion-item   href='/cart' style="font-family: Montserrat; --inner-border-width: 0px;"><ion-icon name="grid"></ion-icon>    Categories</ion-item></ion-menu-toggle>
+        <ion-menu-toggle><ion-item   href='/featured' style="font-family: Montserrat; --inner-border-width: 0px;"><ion-icon name="shirt"></ion-icon>    Featured</ion-item></ion-menu-toggle>
+        <ion-menu-toggle><ion-item   href='/cart' style="font-family: Montserrat; --inner-border-width: 0px;"><ion-icon name="cart"></ion-icon>    Cart</ion-item></ion-menu-toggle>
+        <ion-menu-toggle><ion-item   href='/cart' style="font-family: Montserrat; --inner-border-width: 0px;"><ion-icon name="settings"></ion-icon>    My Account</ion-item></ion-menu-toggle>
+        <ion-menu-toggle><ion-item   href='/cart' style="font-family: Montserrat; --inner-border-width: 0px;"><ion-icon name="chatbox-ellipses"></ion-icon>    Contact Us</ion-item></ion-menu-toggle>
         <ion-menu-toggle><ion-item *ngIf="loggedIn"  (click)="logout()" style="font-family: Montserrat; --inner-border-width: 0px; cursor: pointer;"><ion-icon name="log-out"></ion-icon>    Logout</ion-item></ion-menu-toggle>
       </ion-list>
     </ion-content>
