--- a/src/app/cart/cart.page.html
+++ b/src/app/cart/cart.page.html
@@ -27,7 +27,7 @@
           <h3>{{item.title}}</h3>
           <h2>${{item.price}}</h2>
           <p>Rating:4</p>
-          <a href="#" color="primary">View Details</a>&nbsp;&nbsp;
+          <a style="color: #4864e2;" (click)="product(item.product_id)">View Details</a>&nbsp;&nbsp;
           <a style="color: rgb(196, 28, 28); border-left: 1px solid #464646;" (click)="deleteitem(item._id)">&nbsp;&nbsp;Delete</a>
         </div>
       </div> 
