--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -53,7 +53,7 @@
         <ion-card-subtitle>{{items.title}}</ion-card-subtitle>
       </ion-card-header> -->
       <ion-card-content class="featured-card-content">
-        <h3 class="card-link-text">View
+        <h3 class="card-link-text" (click)="product(items._id)">View
         <ion-icon name="arrow-forward" item-right color="primary"></ion-icon>
         </h3>
       </ion-card-content>
