--- a/src/app/cart/cart.page.html
+++ b/src/app/cart/cart.page.html
@@ -82,7 +82,7 @@
               font-weight: 600;
               font-size: 18px;">${{total}}</p>
             </ion-text>
-             <ion-button style="float: right; left:0% ; margin:0%"  type="button" class="login_btn"  size="default">Checkout</ion-button>
+             <ion-button style="float: right; left:0% ; margin:0%"  type="button" class="login_btn"  size="default" routerLink="/confirmation">Checkout</ion-button>
           </div>
         
       </div>
